--- a/PortFolion/PortFolion/Views/ModernMainWindow.xaml
+++ b/PortFolion/PortFolion/Views/ModernMainWindow.xaml
@@ -1,20 +1,20 @@
-﻿<Controls:MetroWindow x:Class="PortFolion.Views.ModernMainWindow"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-        xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
-        xmlns:v="clr-namespace:PortFolion.Views"
-        xmlns:vm="clr-namespace:PortFolion.ViewModels"
-                  mc:Ignorable="d" SaveWindowPosition="True"
-                  GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
-                  d:DesignHeight="200" d:DesignWidth="500"
-                  TitleCaps="False"
-                  Icon="/Portfolion;component/PortFolion.ico"
-                  Title="PortFolion" >
+﻿<mah:MetroWindow x:Class="PortFolion.Views.ModernMainWindow"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+                xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
+                xmlns:v="clr-namespace:PortFolion.Views"
+                xmlns:vm="clr-namespace:PortFolion.ViewModels"
+                mc:Ignorable="d" SaveWindowPosition="True"
+                GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
+                d:DesignHeight="200" d:DesignWidth="500" 
+                TitleCaps="False"
+                Icon="/Portfolion;component/PortFolion.ico"
+                Title="PortFolion" >
 
     <Window.DataContext>
         <vm:MainWindowViewModel/>
@@ -39,18 +39,17 @@
         <!--WindowのCloseキャンセル処理に対応する場合は、WindowCloseCancelBehaviorの使用を検討してください-->
 
     </i:Interaction.Triggers>
-    <Controls:MetroWindow.RightWindowCommands>
-        <Controls:WindowCommands>
+    <mah:MetroWindow.RightWindowCommands>
+        <mah:WindowCommands>
             <Button Content="settings"/>
             <Button Content="options" />
             <Button Content="lisence" Command="{Binding ShowLisence}"/>
             <Button Content="help"/>
-        </Controls:WindowCommands>
-    </Controls:MetroWindow.RightWindowCommands>
+        </mah:WindowCommands>
+    </mah:MetroWindow.RightWindowCommands>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
-            <!--<ColumnDefinition Width="auto"/>-->
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -60,34 +59,52 @@
         <Grid.Resources>
             <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
         </Grid.Resources>
-        <!--<Menu Grid.Row="0" Grid.ColumnSpan="3">
-            <MenuItem Header="設定" />
-        </Menu>-->
-       <!--<Expander Grid.Row="0" Grid.Column="0" IsExpanded="True" ExpandDirection="Right" Controls:ControlsHelper.ContentCharacterCasing="Normal">
-            <Expander.Header>
-                <TextBlock Text="History" TextAlignment="Left">
-                    <TextBlock.LayoutTransform>
-                        <RotateTransform Angle="90"/>
-                    </TextBlock.LayoutTransform>
-                </TextBlock>
-            </Expander.Header>
-        </Expander>-->
-         <!--<Expander Grid.Row="0" Grid.Column="1" IsExpanded="True" ExpandDirection="Right" Controls:ControlsHelper.ContentCharacterCasing="Normal">
-            <Expander.Header>
-                <TextBlock Text="Location" TextAlignment="Right">
-                    <TextBlock.LayoutTransform>
-                        <RotateTransform Angle="-90"/>
-                    </TextBlock.LayoutTransform>
-                </TextBlock>
-            </Expander.Header>
-        </Expander>-->
-        <TabControl x:Name="MainTabControl" Grid.Row="0" Grid.Column="1" Controls:TabControlHelper.IsUnderlined="True" >
-            <Controls:MetroTabItem Header="_Graph">
+        
+        <mah:MetroAnimatedSingleRowTabControl x:Name="MainTabControl" TabStripPlacement="Left" Grid.Row="0" Grid.Column="1" mah:TabControlHelper.IsUnderlined="True" >
+            <mah:MetroAnimatedSingleRowTabControl.Resources>
+                <Style BasedOn="{StaticResource {x:Type TabItem}}" TargetType="{x:Type mah:MetroTabItem}">
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <ContentPresenter Content="{TemplateBinding Content}">
+                                    <ContentPresenter.LayoutTransform>
+                                        <RotateTransform Angle="270" />
+                                    </ContentPresenter.LayoutTransform>
+                                </ContentPresenter>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </mah:MetroAnimatedSingleRowTabControl.Resources>
+            <mah:MetroTabItem Header="Graph">
                 <v:GraphTab/>
-            </Controls:MetroTabItem>
-            <Controls:MetroTabItem Header="_Edit">
+            </mah:MetroTabItem>
+            <mah:MetroTabItem Header="Edit">
                 <v:ListTab />
-            </Controls:MetroTabItem>
-        </TabControl>
+            </mah:MetroTabItem>
+        </mah:MetroAnimatedSingleRowTabControl>
+        <!--<TabControl x:Name="MainTabControl" TabStripPlacement="Left" Grid.Row="0" Grid.Column="1" mah:TabControlHelper.IsUnderlined="True" >
+            <TabControl.Resources>
+                <Style BasedOn="{StaticResource {x:Type TabItem}}" TargetType="{x:Type mah:MetroTabItem}">
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <ContentPresenter Content="{TemplateBinding Content}">
+                                    <ContentPresenter.LayoutTransform>
+                                        <RotateTransform Angle="270" />
+                                    </ContentPresenter.LayoutTransform>
+                                </ContentPresenter>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TabControl.Resources>
+            <mah:MetroTabItem Header="Graph">
+                <v:GraphTab/>
+            </mah:MetroTabItem>
+            <mah:MetroTabItem Header="Edit">
+                <v:ListTab />
+            </mah:MetroTabItem>
+        </TabControl>-->
     </Grid>
-</Controls:MetroWindow>
+</mah:MetroWindow>
