--- a/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
@@ -94,23 +94,24 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="推移" HorizontalAlignment="Center"/>
-                <ToggleButton x:Name="menu" Grid.Column="1"  HorizontalAlignment="Right" Background="Transparent"
+                <ToggleButton x:Name="menu" IsChecked="True" Grid.Column="1"  HorizontalAlignment="Right" Background="Transparent"
                               Style="{StaticResource MetroFlatToggleButton}"
                               Content="{iconPacks:PackIconMaterial Kind=Menu,Height=10}"/>
             </Grid>
         </GroupBox.Header>
-        <mah:SplitView Margin="-4" DisplayMode="Overlay" PanePlacement="Right" OpenPaneLength="100"
+        <mah:SplitView Margin="-4" DisplayMode="Overlay" PanePlacement="Right" OpenPaneLength="120"
                        IsPaneOpen="{Binding IsChecked,ElementName=menu,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
             <mah:SplitView.Pane>
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel Orientation="Vertical" x:Name="menuItems">
-                        <ToggleButton Content="残高&amp;CF" IsChecked="{Binding VisibleTransition}"/>
-                        <ToggleButton Content="残高&amp;累積CF" IsChecked="{Binding VisibleTransitionStackCF}"/>
-                        <ToggleButton Content="損益" IsChecked="{Binding VisibleTransitionPL}"/>
-                        <ToggleButton Content="比率推移"/>
-                        <ToggleButton Content="内訳推移"/>
-                        <ToggleButton Content="指数" IsChecked="{Binding VisibleIndex}"/>
-                        <ToggleButton Content="変動率" IsChecked="{Binding VisibleVolatility}"/>
+                        
+                        <ToggleButton Content="残高&amp;CF" Margin="0,2" IsChecked="{Binding VisibleTransition}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="残高&amp;累積CF"  Margin="0,2" IsChecked="{Binding VisibleTransitionStackCF}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="損益" Margin="0,2" IsChecked="{Binding VisibleTransitionPL}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="指数" Margin="0,2" IsChecked="{Binding VisibleIndex}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="収益率" Margin="0,2" IsChecked="{Binding VisibleVolatility}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="比率推移" Margin="0,2" IsEnabled="False" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="内訳推移" Margin="0,2" IsEnabled="False" Style="{StaticResource MetroFlatToggleButton}"/>
                     </StackPanel>
                 </ScrollViewer>
             </mah:SplitView.Pane>
