--- a/PortFolion/PortFolion/App.xaml
+++ b/PortFolion/PortFolion/App.xaml
@@ -1,10 +1,9 @@
 ﻿<Application x:Class="PortFolion.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             StartupUri="Views\ModernMainWindow.xaml"
-             Startup="Application_Startup">
+             Startup="Application_Startup" Exit="Application_Exit">
+    <!--StartupUri="Views\ModernMainWindow.xaml"-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
