--- a/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
@@ -19,7 +19,6 @@
         <GroupBox.Resources>
             <selector:GraphTemplateSelector x:Key="GraphTemplateSelector"/>
             <DataTemplate x:Key="TransitionTemplate" DataType="{x:Type vm:GraphVmBase}">
-                <Border Margin="1,1,3,1" BorderThickness="1" BorderBrush="{StaticResource {x:Static SystemColors.HighlightBrushKey}}" >
                     <DockPanel>
                         <Button DockPanel.Dock="Right"  Content="{iconPacks:PackIconMaterial Kind=Close,Width= 10}" VerticalAlignment="Top" HorizontalAlignment="Right">
                             <i:Interaction.Triggers>
@@ -50,42 +49,47 @@
                             </lvc:CartesianChart.AxisY>
                         </lvc:CartesianChart>
                     </DockPanel>
-                </Border>
             </DataTemplate>
             <DataTemplate x:Key="DefaultGraphTemplate" DataType="{x:Type vm:GraphVmBase}">
+                <DockPanel>
+                    <Button DockPanel.Dock="Right" Content="{iconPacks:PackIconMaterial Kind=Close,Width= 10}" VerticalAlignment="Top" HorizontalAlignment="Right">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <ei:CallMethodAction TargetObject="{Binding}" MethodName="Dispose"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    <lvc:CartesianChart x:Name="TransGraph" Grid.Column="0" Series="{Binding}" LegendLocation="Top" MinHeight="250" Zoom="X">
+                        <lvc:CartesianChart.DataTooltip>
+                            <lvc:DefaultTooltip Background="Black" Opacity="0.7"/>
+                        </lvc:CartesianChart.DataTooltip>
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis MinRange="2" Labels="{Binding Labels}" RangeChangedCommand="{Binding RangeChangedCmd}" Position="LeftBottom"
+                                        MinValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+                                        MaxValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator StrokeThickness="1" StrokeDashArray="2"/>
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis LabelFormatter="{Binding YFormatter}">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator StrokeThickness="1" StrokeDashArray="2"/>
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisY>
+                    </lvc:CartesianChart>
+                </DockPanel>
+            </DataTemplate>
+
+            <DataTemplate x:Key="GraphContent">
                 <Border Margin="1,1,3,1" BorderThickness="1" BorderBrush="{StaticResource {x:Static SystemColors.HighlightBrushKey}}" >
-                    <DockPanel>
-                        <Button DockPanel.Dock="Right" Content="{iconPacks:PackIconMaterial Kind=Close,Width= 10}" VerticalAlignment="Top" HorizontalAlignment="Right">
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="Click">
-                                    <ei:CallMethodAction TargetObject="{Binding}" MethodName="Dispose"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </Button>
-                        <lvc:CartesianChart x:Name="TransGraph" Grid.Column="0" Series="{Binding}" LegendLocation="Top" MinHeight="250" Zoom="X">
-                            <lvc:CartesianChart.DataTooltip>
-                                <lvc:DefaultTooltip Background="Black" Opacity="0.7"/>
-                            </lvc:CartesianChart.DataTooltip>
-                            <lvc:CartesianChart.AxisX>
-                                <lvc:Axis MinRange="2" Labels="{Binding Labels}" RangeChangedCommand="{Binding RangeChangedCmd}" Position="LeftBottom"
-                                            MinValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
-                                            MaxValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
-                                    <lvc:Axis.Separator>
-                                        <lvc:Separator StrokeThickness="1" StrokeDashArray="2"/>
-                                    </lvc:Axis.Separator>
-                                </lvc:Axis>
-                            </lvc:CartesianChart.AxisX>
-                            <lvc:CartesianChart.AxisY>
-                                <lvc:Axis LabelFormatter="{Binding YFormatter}">
-                                    <lvc:Axis.Separator>
-                                        <lvc:Separator StrokeThickness="1" StrokeDashArray="2"/>
-                                    </lvc:Axis.Separator>
-                                </lvc:Axis>
-                            </lvc:CartesianChart.AxisY>
-                        </lvc:CartesianChart>
-                    </DockPanel>
+                    <ContentControl ContentTemplateSelector="{StaticResource GraphTemplateSelector}" 
+                                    Content="{Binding}"/>
                 </Border>
             </DataTemplate>
+            
         </GroupBox.Resources>
         <GroupBox.Header>
             <Grid>
@@ -110,15 +114,15 @@
                         <ToggleButton Content="損益" Margin="0,2" IsChecked="{Binding VisibleTransitionPL}" Style="{StaticResource MetroFlatToggleButton}"/>
                         <ToggleButton Content="指数" Margin="0,2" IsChecked="{Binding VisibleIndex}" Style="{StaticResource MetroFlatToggleButton}"/>
                         <ToggleButton Content="収益率" Margin="0,2" IsChecked="{Binding VisibleVolatility}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="比率推移" Margin="0,2" IsEnabled="False" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="内訳推移" Margin="0,2" IsEnabled="False" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="比率推移" Margin="0,2" Style="{StaticResource MetroFlatToggleButton}" Visibility="Hidden"/>
+                        <ToggleButton Content="内訳推移" Margin="0,2" Style="{StaticResource MetroFlatToggleButton}" Visibility="Hidden"/>
                     </StackPanel>
                 </ScrollViewer>
             </mah:SplitView.Pane>
             <ScrollViewer x:Name="viewer" Grid.Column="0" Margin="0" VerticalScrollBarVisibility="Auto">
                 <ItemsControl ItemsSource="{Binding Graphs}" 
                               Width="{Binding Width,ElementName=viewer}" 
-                              ItemTemplateSelector="{StaticResource GraphTemplateSelector}">
+                              ItemTemplate="{StaticResource GraphContent}"><!--ItemTemplateSelector="{StaticResource GraphTemplateSelector}"-->
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel Orientation="Vertical"/>
@@ -127,41 +131,5 @@
                 </ItemsControl>
             </ScrollViewer>
         </mah:SplitView>
-        <!--<Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
-            
-            <ScrollViewer x:Name="viewer" Grid.Column="0" Margin="0" VerticalScrollBarVisibility="Auto">
-                <ItemsControl ItemsSource="{Binding Graphs}" Width="{Binding Width,ElementName=viewer}" ItemTemplateSelector="{StaticResource GraphTemplateSelector}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Vertical"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </ScrollViewer>
-            <Expander IsExpanded="True" Grid.Column="1" ExpandDirection="Left" Margin="5,-5,-5,-5">
-                <Expander.Header>
-                    <TextBlock Text="Menu" TextAlignment="Left">
-                        <TextBlock.LayoutTransform>
-                            <RotateTransform Angle="90"/>
-                        </TextBlock.LayoutTransform>
-                    </TextBlock>
-                </Expander.Header>
-                <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <StackPanel Orientation="Vertical">
-                        <ToggleButton Content="残高&amp;CF" IsChecked="{Binding VisibleTransition}"/>
-                        <ToggleButton Content="残高&amp;累積CF" IsChecked="{Binding VisibleTransitionStackCF}"/>
-                        <ToggleButton Content="損益" IsChecked="{Binding VisibleTransitionPL}"/>
-                        <ToggleButton Content="比率推移"/>
-                        <ToggleButton Content="内訳推移"/>
-                        <ToggleButton Content="指数" IsChecked="{Binding VisibleIndex}"/>
-                        <ToggleButton Content="変動率" IsChecked="{Binding VisibleVolatility}"/>
-                    </StackPanel>
-                </ScrollViewer>
-            </Expander>
-        </Grid>-->
     </GroupBox>
 </UserControl>
